# YMCV

./: .gitignore  LICENSE  README.en.md  README.md
ESP32-YMCV/: CMakeLists.txt  sdkconfig
ESP32-YMCV/components/: component_conf.mk
ESP32-YMCV/components/CONFIG/: CMakeLists.txt  Pubtype.h  read_esp32_mac.h
ESP32-YMCV/components/LED/: CMakeLists.txt  LED.c  LED.h
ESP32-YMCV/components/YMCV/: CMakeLists.txt  YMCV.h
ESP32-YMCV/components/YMCV/CONFIG/: YMCV_Mem.c  YMCV_Mem.h  YMCV_PubDefine.h  YMCV_PubType.h
ESP32-YMCV/components/YMCV/CORE/: YMCV_AreaFillCal.h  YMCV_DecisionTree_ID3.h  YMCV_EdgeCal.h  YMCV_FeatCal.h  YMCV_FormCge.h  YMCV_FreqCal.h  YMCV_GeomCal.h  YMCV_Graph.h  YMCV_InnerMath.h  YMCV_IntegralCal.h  YMCV_KmeansPlusPlus.h  YMCV_MergeCal.h  YMCV_Padding.h  YMCV_PixConv.h  YMCV_PubData.h  YMCV_SpaceCal.h  YMCV_Special_Effect.h
ESP32-YMCV/components/YMCV/Code/: avilib.c  bmp.h  gifdec.c  tjpgd.c  tjpgd.h
ESP32-YMCV/components/YMCV/DEBUG/: YMCV_Debug.c  YMCV_Debug.h
ESP32-YMCV/components/YMCV/IOFILE/: YMCV_IOFile.h  YMCV_ImageDecode.c  YMCV_ImageEncode.c
ESP32-YMCV/components/YMCV/OPOBJ/: YMCV_Creat.c  YMCV_Creat.h  YMCV_Free.c  YMCV_Free.h  YMCV_OBJ.h
ESP32-YMCV/components/YMCV/QRCODE/: YMCV_Codes.h
ESP32-YMCV/main/: CMakeLists.txt  app_camera.c  ymcv_main.c
ESP32-YMCV/main/include/: app_camera.h
Linux-YMCV/: CMakeLists.txt  makefast.sh
Linux-YMCV/CONFIG/: Pubtype.h
Linux-YMCV/Demo/: 0、SDL_Test.c  1.1、ImageShowTest.c  1.2、ImageCopyTest.c  1.3、ImageFormChange.c  1.4、ImageAreaFill.c  1.5、ImageSeedFill.c  1.6、ImageRead.c  10.1、GrayRemovalFog.c  10.2、BadImageColor.c  10.3、GrayInPainting.c  10.4、ImageFishEye.c  10.5、ImageCartoon.c  10.6、ImageRigidDeformation.c  11.1、FFT1d_Test.c  11.4、FMat_Test.c  11.5、KmeansTest.c  11.6、GMM_Test.c  11.7、DecisionTree_Test.c  11.8、LineSegmentsMerge.c  11.9、DelauneyTriangle.c  12.1、AprilTagDecode.c  12.2、DataMatrixDecode.c  12.3、QRDecode.c  12.4、BarDecode.c  12.5、QR_Encode.c  13.1、Scoring_System.c  13.2、Table_Recognize.c  13.3、Calibrating_Data.c  13.4、FacePoint_Train.c  2.10、ChannelRgbInversAndBright.c  2.11、ChannelRgbContractAndLiner.c  2.12、ChannelRgbLogAndExp.c  2.13、ChannelRgbGamaAndScurve.c  2.14、ChannelRgbCstom.c  2.15、ChannelRgbInversAndBright_1Param.c  2.16、ChannelRgbContractAndLiner_1Param.c  2.17、ChannelRgbLogAndExp_1Param.c  2.18、ChannelRgbGamaAndScurve_1Param.c  2.1、ChannelGray2binTest.c  2.2、ChannelGrayExposeAndColorTo.c  (+93 more)
Linux-YMCV/ImageSource/: ctcut00_gray.c  gujia_gray.c  imageSource.h  linglong_00.c  luojiuchuan_gray.c  mm_00.c  sleft_sright_gray.c  wangge_gray.c  xgmm.c  xgmm_gray.c
Linux-YMCV/SDL_LCD/: SDL_LCD.c  SDL_LCD.h  sdl安装.txt
Linux-YMCV/YMCV/CONFIG/: YMCV_Mem.c  YMCV_Mem.h  YMCV_PubDefine.h  YMCV_PubType.h
Linux-YMCV/YMCV/CORE/: YMCV_AreaFillCal.h  YMCV_BasicObjCal.h  YMCV_BinaryCal.h  YMCV_ChannelCal.h  YMCV_DecisionTree_ID3.h  YMCV_FastMath.h  YMCV_FeatCal.h  YMCV_FormCge.h  YMCV_FreqCal.h  YMCV_GMM.h  YMCV_HistCal.h  YMCV_InnerMath.h  YMCV_MatchingCal.h  YMCV_MergeCal.h  YMCV_Padding.h  YMCV_PixConv.h  YMCV_SegnmCal.h  YMCV_SpaceCal.h
Linux-YMCV/YMCV/Code/: avilib.c  gifdec.c  gifdec.h  jpeg.c
Linux-YMCV/YMCV/DEBUG/: YMCV_Debug.c  YMCV_Debug.h
Linux-YMCV/YMCV/IOFILE/: YMCV_IOFile.h  YMCV_ImageDecode.c
Linux-YMCV/YMCV/OPOBJ/: YMCV_Creat.c  YMCV_Creat.h  YMCV_Free.c  YMCV_Free.h
Linux-YMCV/YMCV/QRCODE/: YMCV_Codes.h
STM32-YMCV/CONFIG/: MemDbg.h  Pubtype.h  camera.h
STM32-YMCV/Demo/: 0--LCD_Test.c  1.1--ImageShowTest.c  1.2--ImageCopyTest.c  1.3--ImageFormChange.c  1.4--ImageAreaFill.c  1.5--ImageSeedFill.c  1.6--ImageRead.c  10.1--GrayRemovalFog.c  10.2--BadImageColor.c  10.3--GrayInPainting.c  10.4--ImageFishEye.c  10.5--ImageCartoon.c  10.6--ImageRigidDeformation.c  11.1--FFT1d_Test.c  11.4--FMat_Test.c  11.5--KmeansTest.c  11.6--GMM_Test.c  11.7--DecisionTree_Test.c  11.8--LineSegmentsMerge.c  11.9--DelauneyTriangle.c  12.1--AprilTagDecode.c  12.2--DataMatrixDecode.c  12.3--QRDecode.c  12.4--BarDecode.c  12.5--QR_Encode.c  2.1--ChannelGray2binTest.c  2.10--ChannelRgbInversAndBright.c  2.11--ChannelRgbContractAndLiner.c  2.12--ChannelRgbLogAndExp.c  2.13--ChannelRgbGamaAndScurve.c  2.14--ChannelRgbCstom.c  2.15--ChannelRgbInversAndBright_1Param.c  2.16--ChannelRgbContractAndLiner_1Param.c  2.17--ChannelRgbLogAndExp_1Param.c  2.18--ChannelRgbGamaAndScurve_1Param.c  2.2--ChannelGrayExposeAndColorTo.c  2.3--ChannelGrayInversAndBright.c  2.4--ChannelGrayContractAndLiner.c  2.5--ChannelGrayLogAndExp.c  2.6--ChannelGrayGamaAndScurve.c  (+89 more)
STM32-YMCV/GRAPH/: Puse.h  delay.h  lcd_cfg.h  led.h  ov5640.h  sccb.h  sram.h  ympic.h
STM32-YMCV/ImageSource/: aprilTag2_gray.c  bar_gray.c  ctcut01_gray.c  house2.c  huochairen_gray.c  imageSource.h  luojiuchuan_112x112_Gray.c  mm02.c  mm02_gray.c  mnumber0_9_gray.c  qrcode_gray.c  sleft1_sright1_gray.c
STM32-YMCV/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM32-YMCV/LCD/: LCD.c  LCD.h
STM32-YMCV/MDK-ARM/: YMCV_GRAPH.BAT  YMCV_GRAPH.uvguix.15576  YMCV_GRAPH.uvoptx  YMCV_GRAPH.uvprojx  startup_stm32f407xx.lst  startup_stm32f407xx.s
STM32-YMCV/Src/: dcmi.c  fsmc.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
STM32-YMCV/YMCV/: YMCV.h
X64-YMCV/Demo/: 0、EGE_Test.c  1.2、ImageCopyTest.c  1.5、ImageSeedFill.c  1.6、ImageRead.c  10.1、GrayRemovalFog.c  10.6、ImageRigidDeformation.c  11.1、FFT1d_Test.c  11.4、FMat_Test.c  11.5、KmeansTest.c  11.7、DecisionTree_Test.c  11.8、LineSegmentsMerge.c  11.9、DelauneyTriangle.c  12.1、AprilTagDecode.c  12.2、DataMatrixDecode.c  12.3、QRDecode.c  12.4、BarDecode.c  12.5、QR_Encode.c  13.1、Scoring_System.c  13.2、Table_Recognize.c  2.13、ChannelRgbGamaAndScurve.c  2.15、ChannelRgbInversAndBright_1Param.c  2.17、ChannelRgbLogAndExp_1Param.c  3.3、HistGrayHistMapTo.c  (+42 more)
X86-YMCV/: YMCV.sln
使用说明图片/: 文件说明.txt
例程测试视频/: 视频地址.txt
图片素材/: ymtec.avi
教程&Wiki/: 0、YMCV入门简介.md  10、图像特效与修复.md  11、数据处理与机器学习.md  12、条形码与二维码识别.md  1、图像基础操作.md  2、图像通道渲染.md  3、图像直方图渲染.md  4、图像空域渲染.md  5、图像频域渲染.md  6、图像几何变换.md  7、图像分割.md  8、图像特征提取.md  9、图像目标匹配.md
机器&人眼视觉入门文档/: 1、从人眼视觉到颜色模型.md  2、从人眼视觉到视觉感知.md  3、数字图像处理入门.md  4、图像处理基础.md  5、图像点运算.md
(+329 files in other folders)
